# fantasy-cpu-emulator

./: Cargo.toml  README.md  chip-names.txt  scratch
fantasy-cpu-emulator-macros/: Cargo.toml  README.md  todo
fantasy-cpu-emulator-macros/src/: lib.rs
fantasy-cpu-emulator-macros/tests/: chip.rs
files/: test.s
src/: banana.rs  chip.rs  clock.rs  jackfruit.rs  lib.rs  lotus.rs  main.rs  potato.rs  sound.rs  unpipelined_potato.rs
src/sound/: mod.rs
