[package]
name = "fantasy-cpu-emulator"
version = "0.1.0"
authors = ["Justin (:flaviusb) Marsh <justin.marsh@flaviusb.net>"]

[dependencies]
fantasy-cpu-emulator-macros = { path = "fantasy-cpu-emulator-macros" }
quote = "1.0"
syn = { version = "1.0", features = ["full", "visit", "fold", "extra-traits", "parsing", "proc-macro"] }
proc-macro2 = "*"

[workspace]
# members = ["fantasy-cpu-emulator-macros"]
