[package]
name = "fantasy-cpu-emulator"
version = "0.3.0"
authors = ["Justin (:flaviusb) Marsh <justin.marsh@flaviusb.net>"]
edition = "2021"
description = "Fantasy CPU Emulator."
license = "GPL-3.0"
readme = "README.md"
license-file = "LICENSE"
homepage = "https://github.com/flaviusb/fantasy-cpu-emulator"
repository = "https://github.com/flaviusb/fantasy-cpu-emulator"

[dependencies]
fantasy-cpu-emulator-macros = { path = "fantasy-cpu-emulator-macros", version = "0.3" }
#fantasy-cpu-emulator-macros = "0.2"
quote = "1.0"
syn = { version = "2.0", features = ["full", "visit", "fold", "extra-traits", "parsing", "proc-macro"] }
proc-macro2 = "1.0"
getopts = "0.2"
dasp_ring_buffer = "0.11.0"
#arraydeque = { version = "0.4.5", features = ["std", "use_generic_array"] }
#generic-array = "0.12.3"

[workspace]
members = ["fantasy-cpu-emulator-macros"]

[[bin]]
name = "fantasy-assembler"
path = "src/bin/fantasy_assembler.rs"

[[bin]]
name = "fantasy-emulator"
path = "src/bin/fantasy_emulator.rs"
