[package]
name = "fantasy-cpu-emulator-macros"
version = "0.1.0"
authors = ["Justin (:flaviusb) Marsh <justin.marsh@flaviusb.net>"]
workspace = ".."

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["full", "visit", "fold", "extra-traits", "parsing", "proc-macro"] }
